bug 86645 M0.9.1 crashes at the 2nd "Default Plugin" window call; r=av,sr/a=blizzard